<resources>
    <string name="app_name">SimpleChat</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="textVersion">Version</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="accept_license">I accept the <u>terms of the license agreement</u></string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="loginRequirement">Login can include only latin letters, numbers and underscore</string>
    <string name="veryBigLogin">Login length is limited to 255 characters</string>
    <string name="veryBigPassword">Password length is limited to 255 characters</string>
    <string name="serverNotRespond">Server not respond</string>
    <string name="error">Error</string>
    <string name="userNotExist">User with this name not exist</string>
    <string name="userAlreadyExist">User with this name already exist</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="badLogin">Login does not meet the requirements</string>
    <string name="badPassword">Password does not meet the requirements</string>
    <string name="deleteFriend">Delete friend</string>
    <string name="enterFriendName">Enter friend\'s nickname</string>
    <string name="add">Add</string>
    <string name="applicationSent">Request send</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="friendRequest">Friend request</string>
    <string name="friends">Friends</string>
    <string name="channel_name">Personal messages</string>
    <string name="channel_description">Notifications about new personal messages</string>
    <string name="no_internet">Bad connection to network</string>
    <string name="retry_again">Retry again</string>

</resources>
